cheng media register & history last

--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -1,6 +1,6 @@
 .footer-copy
   position: relative
-  min-height: 230px
+  min-height: 235px
   background: #f4f4f4
 
 
@@ -16,6 +16,7 @@
   position: relative
   display: flex
   justify-content: center
+  padding-top: 90px
 
   
   &__item
@@ -37,7 +38,19 @@
 
       &:hover
         color: #919191
-      
 
+.footer-social
+  position: relative
+  display: flex
+  justify-content: center
+  padding-top: 20px
+  background: url("../../images/dot-line.png") no-repeat
+  background-position-y: 40px
 
-  
+  &__item
+    margin-left: 7px
+    margin-right: 7px
+
+.copyright
+  text-align: center
+  padding-top: 15px
