--- a/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
+++ b/resources/assets/stylesheets/sass/blocks/simple-btn/simpe-btn.sass
@@ -27,12 +27,15 @@
     text-decoration: none
     color: #000
 
+  +media-1070
+    width: 210px
+
   +media-1050
     width: 195px
     font-size: 15px
 
   +media-1024
-    width: 165px
+    width: 185px
     font-size: 14px
 
   +media-992
