--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -4,8 +4,14 @@
 =media-1920
   @media only screen and (max-width: 1920px)
     @content
+=media-1735
+  @media only screen and (max-width: 1735px)
+    @content
 =media-1680
   @media only screen and (max-width: 1680px)
+    @content
+=media-1610
+  @media only screen and (max-width: 1610px)
     @content
 =media-1600
   @media only screen and (max-width: 1600px)
@@ -13,14 +19,23 @@
 =media-1500
   @media only screen and (max-width: 1500px)
     @content
+=media-1490
+  @media only screen and (max-width: 1490px)
+    @content
 =media-1440
   @media only screen and (max-width: 1440px)
+    @content
+=media-1400
+  @media only screen and (max-width: 1400px)
     @content
 =media-1366
   @media only screen and (max-width: 1366px)
     @content
 =media-1280
   @media only screen and (max-width: 1280px)
+    @content
+=media-1240
+  @media only screen and (max-width: 1240px)
     @content
 =media-1225
   @media only screen and (max-width: 1225px)
@@ -31,8 +46,20 @@
 =media-1200
   @media only screen and (max-width: 1200px)
     @content
+=media-1155
+  @media only screen and (max-width: 1155px)
+    @content
 =media-1152
   @media only screen and (max-width: 1152px)
+    @content
+=media-1105
+  @media only screen and (max-width: 1105px)
+    @content
+=media-1100
+  @media only screen and (max-width: 1100px)
+    @content
+=media-1070
+  @media only screen and (max-width: 1070px)
     @content
 =media-1050
   @media only screen and (max-width: 1050px)
@@ -43,17 +70,26 @@
 =media-1000
   @media only screen and (max-width: 1000px)
     @content
+=media-998
+  @media only screen and (max-width: 998px)
+    @content
 =media-992
   @media only screen and (max-width: 992px)
     @content
 =media-955
   @media only screen and (max-width: 955px)
     @content
+=media-915
+  @media only screen and (max-width: 915px)
+    @content
 =media-900
   @media only screen and (max-width: 900px)
     @content
 =media-860
   @media only screen and (max-width: 860px)
+    @content
+=media-810
+  @media only screen and (max-width: 810px)
     @content
 =media-800
   @media only screen and (max-width: 800px)
