--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-        <div class="emotions">
+        <div id="emotions" class="emotions">
 	        <img class="basil basil-first" src="/assets/images/basil-footer_second.png">
 	        <img class="basil basil-second" src="/assets/images/basil-footer_first.png">
             <h1 data-aos="fade-right" class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
@@ -62,12 +62,12 @@
 					<a class="contact-info__item contact-info__item_hover_disable" href="#">Разработка сайта: <span class="contact-info__item_success"> Rocket Science</span></a>
 				</div>
 				<div class="footer-social">
-					<a href=""><img src="/assets/images/footer-vk.png" alt="vkontakte"></a>
-					<a href=""><img src="/assets/images/footer-faceboock.png" alt="facebook"></a>
-					<a href=""><img src="/assets/images/footer-insta.png" alt="instagram"></a>
+					<a class="footer-social__item" href=""><img src="/assets/images/footer-vk.png" alt="vkontakte"></a>
+					<a class="footer-social__item" href=""><img src="/assets/images/footer-faceboock.png" alt="facebook"></a>
+					<a class="footer-social__item" href=""><img src="/assets/images/footer-insta.png" alt="instagram"></a>
 				</div>
 				<div class="copyright">
-					<span>&copy; 2018 Кафе </span>
+					<span class="contact-info__item_hover_disable">&copy; 2018 Кафе &laquo; Piu Del Cibo &raquo;</span>
 				</div>
 			</div>
 		</div>
