--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -38,5 +38,5 @@
         </div>
     </div>
     <img class="sheet sheet__third" src="/assets/images/sheets-third.png">
-    <div class="sheet sheet__four"></div>
+    <img class="sheet sheet__four" src="/assets/images/sheets-four.png">
 </header>
