--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -10,6 +10,15 @@ a
   justify-content: center
   min-height: 150px
   line-height: 150px
+  padding-left: 105px
+
+  +media-1050
+    padding-left: 50px
+
+  +media-992
+    justify-content: space-evenly
+    padding-left: 0
+
 
   &__item
     position: relative
@@ -19,6 +28,18 @@ a
     margin-left: 35px
     margin-right: 35px
 
+
+    +media-1152
+      font-size: 16px
+
+    +media-955
+      margin-left: 25px
+      margin-right: 25px
+
+    +media-860
+      margin-left: 15px
+      margin-right: 15px
+      font-size: 15px
 
     +media-768
       font-size: 14px
@@ -38,10 +59,10 @@ a
       border-radius: 50px
 
   &__link
-    transition: .4s
+    transition: .3s
     &:hover
       color: #9ecb32
-      transition: .4s
+      transition: .3s
 
 
 .logo
