--- a/resources/assets/stylesheets/sass/helpers/mixins.sass
+++ b/resources/assets/stylesheets/sass/helpers/mixins.sass
@@ -28,9 +28,14 @@
   padding-left: 0px
   padding-right: 0px
 
+
 @media only screen and (max-width: 1280px)
   .container
     width: 100%
+
+@media only screen and (max-width: 768px)
+  .container
+    width: 718px
 
 =hov-eff-green
   &:hover
