--- a/resources/views/pages/index.njk
+++ b/resources/views/pages/index.njk
@@ -185,7 +185,8 @@
         ] %}
 
         <div class="history-last js-history-last">
-            <h2 data-aos="fade-right" class="history-last__titile js-history-title-all" data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600">Последние Истории</h2>
+            <h2 data-aos="fade-right" class="history-last__titile js-history-title-all" >Последние Истории</h2>
+	        {#data-aos-offset="200" data-aos-easing="ease-in-sine" data-aos-duration="600"#}
             <h2 class="history-last__titile js-history-title" style="display: none">История</h2>
             {% for history in histories %}
 				<div id="{{ history.id }}" class="full-history full-history_disable ">
@@ -235,7 +236,7 @@
     </div>
 </div>
 
-<div class="container-fluid victory">
+<div id="victory" class="container-fluid victory">
 	{#absolut basil#}
 	<img class="basil basil__main__one" src="/assets/images/bsil-last-main_first.png">
 	<img class="basil basil__main__second" src="/assets/images/basil-last-main_second.png">
