--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -28,6 +28,7 @@ footer
 
   +media-768
     top: 30%
+    width: 60px
 
 .basil-second
   top: 55%
@@ -38,7 +39,8 @@ footer
 
   +media-768
     left: 7%
-    top: 67%
+    top: 60%
+    width: 69px
 
   +media-500
     top: 60%
@@ -51,7 +53,7 @@ footer
   font-size: 55px
 
   +media-768
-    font-size: 8.5vw
+    font-size: 7vw
 
   +media-380
     font-size: 11vw
