--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -100,6 +100,9 @@
 =media-720
   @media only screen and (max-width: 720px)
     @content
+=media-700
+  @media only screen and (max-width: 700px)
+    @content
 =media-685
   @media only screen and (max-width: 685px)
     @content
