--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -18,13 +18,31 @@
   justify-content: center
   padding-top: 90px
 
+  +media-992
+    flex-direction: column
+    text-align: center
   
   &__item
     margin-left: 20px
     margin-right: 20px
 
     font-size: 14px
-    
+
+    +media-1024
+      margin-left: 18px
+      margin-right: 18px
+
+    +media-1000
+      margin-left: 15px
+      margin-right: 15px
+
+    +media-992
+      width: 250px
+      margin: 0 auto 15px
+
+      &:first-child
+        width: 100px
+
     &_success
       font-family: gothamPBo
       color: #a3cd3c
@@ -43,9 +61,9 @@
   position: relative
   display: flex
   justify-content: center
-  padding-top: 20px
-  background: url("../../images/dot-line.png") no-repeat
-  background-position-y: 40px
+  margin-top: 20px
+  background: url("../../images/dot-line.png") no-repeat center
+
 
   &__item
     margin-left: 7px
@@ -54,3 +72,4 @@
 .copyright
   text-align: center
   padding-top: 15px
+  padding-bottom: 35px
