--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -57,7 +57,10 @@
     min-height: 770px
 
   +media-720
-    background-position-x: -475px
+    background-position-x: -335px
+
+  +media-700
+    background-position-x: -355px
 
   +media-685
     background-position-x: -790px
@@ -637,6 +640,11 @@
       top: 88%
       left: 13%
 
+    +media-720
+      width: 60px
+      height: 65px
+      left: 11%
+
     +media-576
       top: 80%
 
@@ -710,6 +718,9 @@
     +media-768
       top: 92%
       right: 18%
+
+    +media-720
+      right: 13%
 
     +media-576
       top:  65%
