--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -9,6 +9,9 @@
 
   +media-992
     float: none
+    padding-top: 35px
+    padding-bottom: 0
+
 
   &__titile
     text-align: center
@@ -83,6 +86,12 @@
   +media-1024
     width: 31vw
 
+  +media-700
+    width: 40vw
+
+  +media-685
+    width: 35vw
+
   +media-576
     float: none
     display: flex
@@ -136,7 +145,7 @@
     width: 335px
 
   +media-685
-    width: 34vw
+    width: 40vw
 
   +media-576
     width: 350px
@@ -173,6 +182,9 @@
 
   +media-1152
     padding-left: 10px
+
+  +media-685
+    padding-bottom: 15px
 
   +media-576
     float: none
@@ -304,6 +316,10 @@
   bottom: -33px
   left: 35%
 
+  +media-685
+    bottom: -75px
+    left: 32%
+
   +media-640
     left: 33%
 
@@ -327,6 +343,10 @@
   transform-origin: 50% 20%
   right: 33%
   bottom: -33px
+
+  +media-685
+    right: 30%
+    bottom: -75px
 
   +media-640
     right: 30%
@@ -366,6 +386,9 @@
 
 .history-last-slider > .slick-dots
   z-index: 1
+
+  +media-685
+    bottom: -65px
 
 
 
