--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -10,6 +10,12 @@ a:hover, a:focus
   position: relative
   padding-top: 35px
 
+  +media-992
+    min-height: 1300px
+
+  +media-685
+    min-height: 1450px
+
 .history-create
   position: relative
   background: url("../../images/bg-green.png") no-repeat
@@ -36,6 +42,7 @@ a:hover, a:focus
     margin: 0 auto
     float: none
     width: 42vw
+    //padding-bottom: 65px
 
   +media-900
     width: 45vw
@@ -274,7 +281,7 @@ a:hover, a:focus
 
   +media-992
     left: 20%
-    bottom: 37%
+    bottom: 39%
 
   +media-900
     left: 16%
@@ -287,7 +294,7 @@ a:hover, a:focus
     bottom: 40%
 
   +media-685
-    bottom: 50%
+    bottom: 46%
 
   +media-576
     display: none
@@ -302,6 +309,7 @@ a:hover, a:focus
 
   +media-992
     right: 23%
+    top: 53%
 
   +media-900
     right: 20%
@@ -314,6 +322,7 @@ a:hover, a:focus
 
   +media-685
     right: 10%
+    bottom: 47%
 
   +media-576
     display: none
