--- a/resources/assets/stylesheets/sass/helpers/mixins.sass
+++ b/resources/assets/stylesheets/sass/helpers/mixins.sass
@@ -33,7 +33,7 @@
   .container
     width: 100%
 
-@media only screen and (max-width: 768px)
+//@media only screen and (max-width: 768px)
   .container
     width: 718px
 
