--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -17,6 +17,7 @@ footer
     width: 65px
 
   +media-356
+    display: none
     width: 50px
 
 .basil-first
@@ -30,6 +31,9 @@ footer
     top: 30%
     width: 60px
 
+  +media-576
+    top: 24%
+
 .basil-second
   top: 55%
   left: 12%
@@ -42,8 +46,11 @@ footer
     top: 60%
     width: 69px
 
+  +media-576
+    top: 52%
+
   +media-500
-    top: 60%
+    top: 50%
 
   +media-356
     left: 3%
