--- a/resources/assets/stylesheets/sass/blocks/victory/victory.sass
+++ b/resources/assets/stylesheets/sass/blocks/victory/victory.sass
@@ -27,7 +27,7 @@
     background-position-x: -685px
     background-position-y: 35px
 
-  +media-576
+  +media-640
     background-position-x: 0px
 
 
@@ -54,11 +54,14 @@
     width: 525px
     text-align: left
 
-  +media-576
+  +media-640
     width: 100%
     text-align: center
     padding-left: 0
     padding-right: 0
+
+  +media-320
+    padding-top: 100px
 
 .basil
   position: absolute
@@ -82,9 +85,16 @@
       top: 12%
       right: 21%
 
-    +media-576
+    +media-660
+      right: 10%
+
+    +media-640
       top: 20%
       right: 0%
+
+    +media-356
+      top: 24%
+      right: 10%
 
   &__main__second
     left: 14%
@@ -112,9 +122,14 @@
       left: 5%
       top: 58%
 
-    +media-576
+    +media-640
       top: 18%
       left: 0
+
+    +media-356
+      top: 24%
+      left: 7%
+      width: 10vw
 
   &__main__third
     right: 35%
@@ -139,7 +154,10 @@
       right: 21%
       top: 65%
 
-    +media-576
+    +media-660
+      right: 5%
+
+    +media-640
       display: none
 
 .victory__title
@@ -153,12 +171,16 @@
   +media-768
     padding-left: 0
 
-
-  +media-576
+  +media-640
     font-size: 9vw
 
   +media-420
     font-size: 10vw
+
+  +media-356
+    font-size: 14vw
+    letter-spacing: 0px
+    line-height: 50px
 
 .victory__text
   text-align: left
@@ -171,13 +193,16 @@
   +media-768
     padding-left: 15px
 
-  +media-576
+  +media-640
     padding-left: 0
     text-align: center
     font-size: 6vw
 
   +media-420
     font-size: 7vw
+
+  +media-320
+    font-size: 10vw
 
 .victory__last__day
   display: block
@@ -192,7 +217,7 @@
     display: block
     text-align: center
 
-  +media-576
+  +media-640
     font-size: 3vw
 
   +media-420
@@ -241,7 +266,7 @@
   +media-768
     width: 445px
 
-  +media-576
+  +media-640
     width: 100%
     padding-right: 25px
 
