--- a/resources/assets/stylesheets/sass/helpers/media.sass
+++ b/resources/assets/stylesheets/sass/helpers/media.sass
@@ -106,6 +106,9 @@
 =media-685
   @media only screen and (max-width: 685px)
     @content
+=media-660
+  @media only screen and (max-width: 660px)
+    @content
 =media-640
   @media only screen and (max-width: 640px)
     @content
