--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -69,7 +69,9 @@
     min-height: 820px
 
   +media-576
-    background-position-x: -1100px
+    height: 600px
+    min-height: auto
+    background-position-x: -922px
 
 .remember
   position: relative
@@ -128,7 +130,7 @@
     float: none
     padding-right: 0
 
-  +media-640
+  +media-660
     margin-top: 160px
 
   +media-576
@@ -160,12 +162,6 @@
 
   +media-1152
     font-size: 65px
-
-  //+media-1024
-    text-align: right
-
-  //+media-992
-    text-align: left
 
   +media-955
     font-size: 55px
@@ -209,6 +205,12 @@
     width: 340px
     margin: 0 auto
 
+  +media-576
+    width: 400px
+
+  +media-420
+    width: 85vw
+
   +media-356
     width: 310px
 
@@ -246,11 +248,12 @@
 
   +media-576
     font-size: 35px
+    padding-left: 55px
 
   +media-420
-    margin-left: 20px
+    padding-left: 45px
 
-  +media-380
+  //+media-380
     margin-left: 36px
 
 .remember__text
@@ -284,13 +287,11 @@
 
   +media-576
     font-size: 17px
-    margin-left: -25px
 
   +media-420
     font-size: 14px
-    margin-left: -10px
 
-  +media-380
+  //+media-380
     margin-left: 12px
 
   +media-356
@@ -353,6 +354,9 @@
 
   +media-576
     flex-direction: column
+
+  +media-356
+    padding-top: 55px
 
 .step
   z-index: 1
@@ -554,10 +558,10 @@
 
   +media-685
     width: 100vw
-    bottom: 32%
+    bottom: 40%
     right: 0
 
-    +media-576
+    +media-660
       display: none
 
 /*AUTSIDE SHEETS*/
@@ -583,6 +587,11 @@
   +media-576
     width: 50px
     height: 50px
+
+  +media-576
+    width: 80px
+
+
 
   &__one
     height: 60px
@@ -615,8 +624,15 @@
       left: 2%
 
     +media-576
-      left: 50%
-      top: 13%
+      top: 155%
+      width: 80px
+      left: 15%
+
+    +media-420
+      left: 8%
+
+    +media-356
+      width: 60px
 
   &__second
     left: 10%
@@ -646,7 +662,15 @@
       left: 11%
 
     +media-576
-      top: 80%
+      left: 15%
+      top: 94%
+      width: 80px
+
+    +media-420
+      left: 8%
+
+    +media-356
+      width: 60px
 
   &__third
     top: 21%
@@ -690,8 +714,9 @@
 
     +media-576
       right: 0
-      left: 13%
-      top: 45%
+      left: 49%
+      top: 20%
+      width: 80px
 
   &__four
     top: 80%
@@ -723,10 +748,16 @@
       right: 13%
 
     +media-576
-      top:  65%
+      top:  125%
+      height: 80px
+
+    +media-420
+      right: 7%
 
     +media-356
       right: 10%
+      width:  60px
+      height: 70px
 
 
 
