--- a/resources/assets/stylesheets/sass/blocks/social/social.sass
+++ b/resources/assets/stylesheets/sass/blocks/social/social.sass
@@ -30,6 +30,7 @@
 
   +media-640
     left: 11%
+    width: 75vw
 
   +media-576
     width: 90%
@@ -52,6 +53,10 @@
     z-index: 1
     margin-left: 20px
     margin-right: 20px
+
+    +media-320
+      margin-left: 15px
+      margin-right: 15px
 
 .social__img
   +media-576
