--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -16,6 +16,10 @@ a:hover, a:focus
   +media-685
     min-height: 1450px
 
+  +media-576
+    padding-top: 620px
+    padding-bottom: 55px
+
 .history-create
   position: relative
   background: url("../../images/bg-green.png") no-repeat
@@ -60,11 +64,18 @@ a:hover, a:focus
   +media-640
     width: 68vw
 
+  +media-576
+    width: 76vw
+
   +media-500
     width: 100%
 
   +media-420
     background-size: contain
+
+  +media-320
+    background-size: 124%
+    background-position-x: -25px
 
 
 .create__pepper
@@ -153,6 +164,9 @@ a:hover, a:focus
   +media-356
     padding-bottom: 35px
 
+  +media-320
+    padding-top: 50px
+
 .history__title
   font-family: drina
   font-size: 50px
@@ -201,6 +215,9 @@ a:hover, a:focus
 
     +media-1105
       font-size: 40px
+
+    +media-320
+      font-size: 30px
 
 .history__social
   padding-right: 15px
@@ -260,6 +277,9 @@ a:hover, a:focus
 
   +media-1225
     padding-top: 25px
+
+  +media-320
+    font-size: 3.6vw
 
 .confirmations
   border-bottom: 1.4px solid
