--- a/resources/views/shared/_nav-header-mobile.njk
+++ b/resources/views/shared/_nav-header-mobile.njk
@@ -1,7 +1,8 @@
 <a href="#" class="btn-gamb">
-	<svg class="gamb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" >
+	{#<svg class="gamb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" >
 		<path d="M0 7.5v5h50v-5zm0 15v5h50v-5zm0 15v5h50v-5z"/>
-	</svg>
+	</svg>#}
+	<img src="/assets/images/burger.png" class="gamb" alt="menu">
 </a>
 
 <a href="#" class="mobile-logo-prevu">
