fixed device width

--- a/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer-copy/footer-copy.sass
@@ -3,6 +3,10 @@
   min-height: 235px
   background: #f4f4f4
 
+  &-lg
+    padding-left: 0
+    padding-right: 0
+
 
 .section-track
   height: 110px
