--- a/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
+++ b/resources/assets/stylesheets/sass/blocks/history-last/history-last.sass
@@ -450,6 +450,13 @@
   +media-576
     display: block
 
+
+
+
   &_success
     background: #9ecb32
     color: #fff
+    line-height: 50px
+
+    &-disable
+     display: none
