--- a/resources/assets/stylesheets/sass/blocks/nav-header-mobile/nav-header-mobile.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header-mobile/nav-header-mobile.sass
@@ -24,8 +24,11 @@
   +media-660
     display: block
 
+  //+mediah-640
+    height: 100vh
+
   +media-500
-    height: 50vh
+    height: 80vh
 
 .btn-gamb
   position: absolute
@@ -56,6 +59,13 @@
 
   &-active
     display: block
+
+  +media-660
+    top: 10%
+    right: 7%
+
+  +media-500
+    top: 7%
 
 .picture__cancel
   width: 25px
