--- a/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
+++ b/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
@@ -61,6 +61,9 @@
     text-align: center
     padding-left: 35px
 
+  +media-380
+    padding-left: 0
+
 
 .js-history-back
   float: right
@@ -69,6 +72,8 @@
   +media-685
     float: none
 
+  +media-420
+    font-size: 3.5vw
 
 .full-history .mCS-dark.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar
   background-color: #9ecb32
