--- a/resources/assets/stylesheets/sass/blocks/header/header.sass
+++ b/resources/assets/stylesheets/sass/blocks/header/header.sass
@@ -306,6 +306,9 @@
     +media-860
       display: block
 
+    +media-320
+      padding-left: 15px
+
   &_bold
     font-family: gothamPBo
     color: #444
@@ -634,6 +637,11 @@
     +media-356
       width: 60px
 
+    +media-320
+      width: 50px
+      height: 50px
+      left: 5%
+
   &__second
     left: 10%
     top: 80%
@@ -671,6 +679,11 @@
 
     +media-356
       width: 60px
+
+    +media-320
+      width: 50px
+      height: 50px
+      left: 5%
 
   &__third
     top: 21%
@@ -718,6 +731,9 @@
       top: 20%
       width: 80px
 
+    +media-320
+      width: 60px
+
   &__four
     top: 80%
     right: 7%
@@ -758,6 +774,11 @@
       right: 10%
       width:  60px
       height: 70px
+
+    +media-320
+      right: 4%
+      width: 50px
+      height: 60px
 
 
 
