--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -53,7 +53,7 @@
     </div>
 	<section class="footer-copy">
 		<div class="section-track"></div>
-		<div class="container-fluid">
+		<div class="container-fluid footer-copy-lg">
 			<div class="container">
 				<div class="contact-info">
 					<a class="contact-info__item contact-info__item_success" href="#">Piudelcibo.ru</a>
