--- a/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
+++ b/resources/assets/stylesheets/sass/blocks/full-history/full-history.sass
@@ -41,7 +41,8 @@
   padding-right: 15px
   
 .full__history__logo
-  float: none
+  +media-685
+    float: none
   
 .full__title
   float: left
@@ -59,7 +60,7 @@
 
   +media-685
     text-align: center
-    padding-left: 35px
+    padding-left: 25px
 
   +media-380
     padding-left: 0
