--- a/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header/nav-header.sass
@@ -2,8 +2,12 @@ a
   color: inherit
 
 .menu
+  display: block
+  transition: 1.5s
+
   +media-660
     display: none
+
 
 .menu-content
   display: flex
