--- a/resources/views/shared/_header.njk
+++ b/resources/views/shared/_header.njk
@@ -4,9 +4,9 @@
     <div class="container">
         {% include "shared/_nav-header.njk" %}
 	    {% include "shared/_nav-header-mobile.njk" %}
-        <div class="remember">
+        <div class="remember" data-aos="fade-up" data-aos-delay="120" data-aos-duration="800">
             <div class="remember-right">
-                <h1 data-aos="fade-right" class="remember__title">Вспомни лучшее</h1>
+                <h1 class="remember__title">Вспомни лучшее</h1>
                 <div class="remember-text">
                     <span class="remember__sub" >вместе с Piu Del Cibo</span>
                     <p class="remember__text remember__text_hide">Расскажи историю о лучшей еде в твоей жизни и выиграй<br>
