--- a/resources/views/shared/_nav-header.njk
+++ b/resources/views/shared/_nav-header.njk
@@ -1,9 +1,9 @@
 <div class="menu">
 	<ul class="menu-content">
-		<li class="menu-content__item"><a class="menu-content__link" href="#" >Главная</a></li>
-		<li class="menu-content__item"><a class="menu-content__link" href="#" >Ваши истории</a></li>
-		<li class="menu-content__item menu-content__logo"><a href="#"><img class="logo" src="/assets/images/nav-header.png" alt="logo"></a></li>
-		<li class="menu-content__item" ><a class="menu-content__link" href="#victory" >Результаты</a></li>
-		<li class="menu-content__item" ><a class="menu-content__link" href="#emotions" >Готовим с эмоцией</a></li>
+		<li class=" menu-content__item" data-aos="fade-right" data-aos-duration="600" ><a class="menu-content__link" href="#" >Главная</a></li>
+		<li class=" menu-content__item" data-aos="fade-right" data-aos-duration="600" ><a class="menu-content__link" href="#" >Ваши истории</a></li>
+		<li class=" menu-content__item menu-content__logo"><a href="#"><img class="logo" src="/assets/images/nav-header.png" alt="logo"></a></li>
+		<li class=" menu-content__item" ><a class="menu-content__link" href="#victory" >Результаты</a></li>
+		<li class=" menu-content__item" ><a class="menu-content__link" href="#emotions" >Готовим с эмоцией</a></li>
 	</ul>
 </div>
