--- a/resources/assets/stylesheets/sass/blocks/footer/footer.sass
+++ b/resources/assets/stylesheets/sass/blocks/footer/footer.sass
@@ -21,7 +21,7 @@ footer
     width: 50px
 
 .basil-first
-  top: 28%
+  top: 28%  //28%
   right: 10%
 
   +media-1024
@@ -229,15 +229,22 @@ footer
   display: block
   margin: 15px auto
   line-height: 45px
+  border: 1px solid #9ecb32
   border-radius: 50px
   outline: none
   font-family: gothamPB
   font-size: 17px
   background: #9ecb32
   color: #fff
-  -webkit-box-shadow: 0px 4px 20px 0px rgba(50, 50, 50, 0.5)
-  -moz-box-shadow:    0px 4px 20px 0px rgba(50, 50, 50, 0.5)
-  box-shadow:         0px 4px 20px 0px rgba(50, 50, 50, 0.5)
+  transition: .3s
+  //-webkit-box-shadow: 0px 4px 20px 0px rgba(50, 50, 50, 0.5)
+  //-moz-box-shadow:    0px 4px 20px 0px rgba(50, 50, 50, 0.5)
+  //box-shadow:         0px 4px 20px 0px rgba(50, 50, 50, 0.5)
+
+  &:hover
+    background: transparent
+    transition: .3s
+
 
   &:focus
     outline: none
@@ -248,9 +255,11 @@ footer
 .slider .slick-dots li.slick-active button:before
   color: #9ecb32
 
+
 .slider .slick-dots li button
   width: 30px
   height: 30px
+
 
 .slider .slick-dots li button:before
   content: ''
@@ -258,6 +267,8 @@ footer
   height: 16px
   border-radius: 50px
   background-color: #9ecb32
+
+
 
 
 
