--- a/resources/assets/stylesheets/sass/blocks/nav-header-mobile/nav-header-mobile.sass
+++ b/resources/assets/stylesheets/sass/blocks/nav-header-mobile/nav-header-mobile.sass
@@ -7,7 +7,7 @@
   padding-top: 20px
   padding-left: 25px
   padding-right: 25px
-  //transition: 1s
+  transition: .3s
   background: #3d3c40
 
   &-active
@@ -18,17 +18,12 @@
     transition: 0.5s
     transform: translate(0,-100%)
 
-  //height: 60vh
-    //background: #3d3c40
-
   +media-660
     display: block
 
-  //+mediah-640
-    height: 100vh
-
   +media-500
     height: 80vh
+
 
 .btn-gamb
   position: absolute
