--- a/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
+++ b/resources/assets/stylesheets/sass/blocks/wrapper/index.sass
@@ -12,9 +12,11 @@ a:hover, a:focus
 
   +media-992
     min-height: 1300px
+    padding-bottom: 45px
 
   +media-685
     min-height: 1450px
+    padding-bottom: 80px
 
   +media-576
     padding-top: 620px
@@ -66,6 +68,7 @@ a:hover, a:focus
 
   +media-576
     width: 76vw
+    //margin-top: 600px
 
   +media-500
     width: 100%
@@ -293,7 +296,7 @@ a:hover, a:focus
 .bacon
   position: absolute
   left: 43%
-  bottom: -100px
+  //bottom: -100px
 
   +media-1152
     left: 40%
@@ -323,7 +326,7 @@ a:hover, a:focus
 .basilick
   position: absolute
   right: 11%
-  top: 75%
+  //top: 75%
   width: 60px
 
 
