--- a/resources/views/shared/_footer.njk
+++ b/resources/views/shared/_footer.njk
@@ -1,9 +1,9 @@
-<footer>
+<footer data-aos="fade-up" data-aos-delay="120" data-aos-duration="1000">
     <div class="container">
         <div id="emotions" class="emotions">
 	        <img class="basil basil-first" src="/assets/images/basil-footer_second.png">
 	        <img class="basil basil-second" src="/assets/images/basil-footer_first.png">
-            <h1 data-aos="fade-right" class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
+            <h1 class="emotions__title">Какие эмоции мы хотим вызвать у наших гостей?</h1>
             <div class="emotions-slider">
                 <div class="footer-slider slider single-item one-time">
 		          {#<button type="button" class="slick-prev"></button>#}
